# mnn-sys

./: .gitmodules  Cargo.toml  build.rs
cpp/include/: mnn_wrapper.h
cpp/src/: mnn_wrapper.cpp
src/: lib.rs
