[package]
name = "mnn-sys"
version = "0.1.0"
edition = "2021"
description = "Safe Rust bindings to a thin C wrapper around Alibaba MNN. Builds MNN from the vendored submodule at 3rd_party/MNN."
license = "Apache-2.0"

[features]
default = []

# GPU backends
metal = []
opencl = []
opengl = []
vulkan = []
cuda = []
coreml = []

[dependencies]
ndarray = "0.16"

[build-dependencies]
cmake = "0.1"
cc = "1.0"
bindgen = "0.69"
